--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -150,7 +150,7 @@ html {
   max-width: 295px;
   width: 100%;
 }
-.footer-copyright{
+.footer-copyright {
   display: flex;
   justify-content: space-between;
   max-width: 790px;
@@ -158,10 +158,76 @@ html {
   align-self: flex-end;
 }
 
-
 .main {
-  height: 900px;
+  background-color: #a7e1ff;
+}
+.map {
+  min-height: calc(100vh - 270px);
+  position: relative;
+  overflow: hidden;
   margin: 0 auto;
-  padding-top: 300px;
-  width: 300px;
+  padding-top: 80px;
+  padding-bottom: 20px;
+  max-width: 1920px;
+  width: 100%;
+  max-height: 945px;
+  height: 100%;
+}
+.map-img {
+  align-items: center;
+  max-width: 1920px;
+  width: 100%;
+}
+.map__icon-container {
+  width: 68px;
+  height: 68px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #fff;
+}
+.map__pet {
+  position: absolute;
+}
+.map__pet--eagle {
+  margin-top: -23.6%;
+  margin-left: 23.5%;
+  
+}
+.map__pet--alligator {
+  margin-top: -23.2%;
+  margin-left: 35.3%;
+}
+.map__pet--gorilla {
+  margin-top: -18%;
+  margin-left: 53.7%;
+}
+.map__pet--panda {
+  margin-top: -23%;
+  margin-left: 67.6%;
+}
+.icon-active {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 4px solid #74d40d;
+}
+.map__pet-name {
+  font-size: 15px;
+  text-transform: uppercase;
+}
+.map__pet-name--eagle {
+  margin-left: -80%;
+  margin-top: -62%;
+}
+.map__pet-name--alligator {
+  margin-left: 99%;
+  margin-top: -61%;
+}
+.map__pet-name--gorilla {
+  margin-left: 105%;
+  margin-top: -61%;
+}
+.map__pet-name--panda {
+  margin-left: 81%;
+  margin-top: -54%;
 }
