--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Roboto';
   src: url(/fonts/Roboto/Roboto-Regular.ttf);
-  font-family: 'SceneW01-Black';
-  src: url(/fonts/SceneW01-Black.ttf);
 }
 html {
   box-sizing: border-box;
@@ -19,6 +17,13 @@ html {
   font-size: 18px;
   line-height: 21px;
 }
+
+/* Wrapper */
+.wrapper {
+  background-color: #a7e1ff;
+}
+
+/* Header */
 .header {
   position: absolute;
   width: 100%;
@@ -42,7 +47,7 @@ html {
   width: 100%;
   padding-top: 12px;
 }
-.navigation {
+.nav {
   max-width: 410px;
   width: 100%;
   align-self: center;
@@ -81,93 +86,24 @@ html {
   padding: 15px;
 }
 .button:hover {
-  background-color: #74d40d;
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+  opacity: 80%;
 }
 .button:active {
   background: #5eac0b;
   -webkit-transform: scale(0.9);
   transform: scale(0.9);
 }
-.footer {
-  position: relative;
-  height: 270px;
-  width: 100%;
-  background-color: #dff5b0;
-}
-.footer-background {
-  background-image: url(/assets/images/footer/footer.png);
-  position: absolute;
-  height: 323px;
-  width: 100%;
-  bottom: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.footer-links {
-  padding-top: 5px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.footer-links__logo-button {
-  display: flex;
-  justify-content: space-between;
-  max-width: 430px;
-  width: 100%;
-}
-.footer-logo {
-  transform: matrix(0.85, 0, 0, 0.85, -9, 0);
-}
-.button--donate {
-  width: 230px;
-  padding: 15px;
-}
-.footer-menu {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-row-gap: 15px;
-  grid-column-gap: 80px;
-}
-.socials {
-  max-width: 190px;
-  width: 100%;
-}
-.social {
-  display: flex;
-  justify-content: space-between;
-}
-.footer-credentials {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 60px;
-}
-.schools-logo {
-  display: flex;
-  justify-content: space-between;
-  max-width: 295px;
-  width: 100%;
-}
-.footer-copyright {
-  display: flex;
-  justify-content: space-between;
-  max-width: 790px;
-  width: 100%;
-  align-self: flex-end;
-}
 
-.main {
-  background-color: #a7e1ff;
+/* Map */
+.map-container {
+  min-height: calc(100vh - 270px);
+  padding-top: 3.5%;
+  padding-bottom: 1.3%;
 }
 .map {
-  min-height: calc(100vh - 270px);
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  padding-top: 80px;
-  padding-bottom: 20px;
   max-width: 1920px;
   width: 100%;
   max-height: 945px;
@@ -216,18 +152,93 @@ html {
   text-transform: uppercase;
 }
 .map__pet-name--eagle {
-  margin-left: -80%;
-  margin-top: -62%;
+  margin-left: -75%;
+  margin-top: -64%;
 }
 .map__pet-name--alligator {
-  margin-left: 99%;
-  margin-top: -61%;
+  margin-left: 101%;
+  margin-top: -65%;
 }
 .map__pet-name--gorilla {
-  margin-left: 105%;
-  margin-top: -61%;
+  margin-left: 110%;
+  margin-top: -65%;
 }
 .map__pet-name--panda {
   margin-left: 81%;
   margin-top: -54%;
+}
+
+/* Footer */
+.footer {
+  position: relative;
+  height: 270px;
+  width: 100%;
+  background-color: #dff5b0;
+}
+.footer-background {
+  background-image: url(/assets/images/footer/footer.png);
+  position: absolute;
+  height: 323px;
+  width: 100%;
+  bottom: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.footer-links {
+  padding-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.footer-links__logo-button {
+  display: flex;
+  justify-content: space-between;
+  max-width: 430px;
+  width: 100%;
+}
+.footer-logo {
+  transform: matrix(0.85, 0, 0, 0.85, -9, 0);
+}
+.button--donate {
+  width: 230px;
+  padding: 15px;
+}
+.footer-menu {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 15px;
+  grid-column-gap: 80px;
+}
+.socials {
+  max-width: 190px;
+  width: 100%;
+}
+.social {
+  display: flex;
+  justify-content: space-between;
+  border-style: none;
+}
+.footer-credentials {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 60px;
+}
+.schools-logo {
+  display: flex;
+  justify-content: space-between;
+  max-width: 295px;
+  width: 100%;
+}
+.rss-logo,
+.yd-logo {
+  cursor: default;
+}
+.footer-copyright {
+  display: flex;
+  justify-content: space-between;
+  max-width: 790px;
+  width: 100%;
+  align-self: flex-end;
+  cursor: default;
 }
