--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -97,7 +97,7 @@ html {
 /* Map */
 .map-container {
   min-height: calc(100vh - 270px);
-  padding-top: 3.5%;
+  padding-top: 4%;
   padding-bottom: 1.3%;
 }
 .map {
@@ -115,8 +115,8 @@ html {
   width: 100%;
 }
 .map__icon-container {
-  width: 68px;
-  height: 68px;
+  width: 64px;
+  height: 64px;
   border-radius: 50%;
   overflow: hidden;
   border: 2px solid #fff;
@@ -125,47 +125,183 @@ html {
   position: absolute;
 }
 .map__pet--eagle {
-  margin-top: -23.6%;
-  margin-left: 23.5%;
-  
+  margin-top: -23.4%;
+  margin-left: 23.6%;
 }
 .map__pet--alligator {
-  margin-top: -23.2%;
-  margin-left: 35.3%;
+  margin-top: -22.9%;
+  margin-left: 35.4%;
 }
 .map__pet--gorilla {
-  margin-top: -18%;
-  margin-left: 53.7%;
+  margin-top: -17.6%;
+  margin-left: 53.8%;
 }
 .map__pet--panda {
-  margin-top: -23%;
-  margin-left: 67.6%;
-}
-.icon-active {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  border: 4px solid #74d40d;
+  margin-top: -22.7%;
+  margin-left: 67.7%;
 }
 .map__pet-name {
   font-size: 15px;
   text-transform: uppercase;
+  pointer-events: none;
 }
 .map__pet-name--eagle {
-  margin-left: -75%;
+  margin-left: -82%;
   margin-top: -64%;
 }
 .map__pet-name--alligator {
-  margin-left: 101%;
+  margin-left: 106%;
   margin-top: -65%;
 }
 .map__pet-name--gorilla {
-  margin-left: 110%;
+  margin-left: 116%;
   margin-top: -65%;
 }
 .map__pet-name--panda {
-  margin-left: 81%;
+  margin-left: 86%;
   margin-top: -54%;
+}
+.map-mark {
+  position: absolute;
+}
+.map__mark--eagle {
+  margin-top: -75%;
+  margin-left: 112%;
+}
+.map__mark--alligator {
+  margin-top: -55%;
+  margin-left: -40%;
+}
+.map__mark--gorilla {
+  margin-top: -62%;
+  margin-left: -54%;
+}
+.map__mark--panda {
+  margin-top: -78%;
+  margin-left: -37%;
+}
+.map__location--usa {
+  margin-top: -85%;
+  margin-left: 195%;
+}
+.map__location--drc {
+  margin-top: -25%;
+  margin-left: -109%;
+}
+.map__location--china {
+  margin-top: -37%;
+  margin-left: -47%;
+}
+
+/* Tooltip */
+.tooltip:not(.tooltip-eagle) {
+  visibility: hidden;
+  position: absolute;
+  width: 102px;
+  height: 47px;
+  margin-left: 74px;
+  margin-top: -59px;
+  background-color: #74d40d;
+  text-align: center;
+  padding-top: 5px;
+}
+.tooltip-eagle {
+  visibility: hidden;
+  position: absolute;
+  width: 102px;
+  height: 47px;
+  margin-left: -109px;
+  margin-top: -53px;
+  background-color: #74d40d;
+  text-align: center;
+  padding-top: 5px;
+}
+.tooltip-block {
+  position: relative;
+}
+.tooltip-block--right::before {
+  position: absolute;
+  content: '';
+  left: -15px;
+  bottom: 10px;
+  border: 7px solid transparent;
+  border-top: 10px solid #74d40d;
+  transform: rotate(90deg);
+}
+.tooltip-block--left::before {
+  position: absolute;
+  content: '';
+  left: 102px;
+  bottom: 10px;
+  border: 7px solid transparent;
+  border-top: 10px solid #74d40d;
+  transform: rotate(-90deg);
+}
+.tooltip-heading {
+  text-transform: uppercase;
+}
+.tooltip-location::first-letter {
+  text-transform: capitalize;
+}
+.map__pet:hover .tooltip {
+  visibility: visible;
+}
+.map__pet--eagle:hover .tooltip {
+  visibility: visible;
+}
+.map__icon-container:hover {
+  border: 4px solid #74d40d;
+}
+.text {
+  font-size: 16px;
+  line-height: 19px;
+}
+.zoom {
+  position: absolute;
+  display: flex;
+  flex-flow: column;
+  background-color: #fff;
+  justify-content: center;
+  text-align: center;
+  width: 32px;
+  height: 80px;
+  margin-top: -9.3%;
+  margin-left: 97.2%;
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+}
+.zoom-in {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  width: 32px;
+  height: 40px;
+  font-size: 27px;
+  background-color: #fff;
+  border-top: 1px solid #000;
+}
+.zoom-in:hover,
+.zoom-out:hover {
+  opacity: 50%;
+}
+.zoom-in:active {
+  transform: scale(0.8);
+  transition: 0.5s;
+  border-top: 1px solid #fff;
+}
+.zoom-out:active {
+  transform: scale(0.8);
+  transition: 0.5s;
+  border-bottom: 1px solid #fff;
+}
+.zoom-out {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  width: 32px;
+  height: 40px;
+  font-size: 40px;
+  background-color: #fff;
+  border-bottom: 1px solid #000;
 }
 
 /* Footer */
