--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -135,35 +135,45 @@ html {
 .content {
   padding-top: 100px;
 }
-.pets {
-  display: flex;
-  list-style: none;
-  padding-top: 80px;
-  padding-bottom: 48px;
-  align-items: center;
+.pets-box {
+  max-width: 1370px;
+  width: 100%;
+  margin: 0 auto;
   background-image: url(/assets/images/pets-parallax/background.png);
   background-repeat: no-repeat;
   background-position: center;
 }
+.pets {
+  display: flex;
+  list-style: none;
+  padding-top: 200px;
+  padding-bottom: 20px;
+  align-items: center;
+  transform: matrix(1, 0, 0, 1, 0, -75);
+}
+.pet-image {
+  width: 250px;
+  height: 350px;
+}
 .eagle {
   z-index: 0;
-  transform: matrix(0.8, 0, 0, 0.8, 240, 0);
+  transform: matrix(1, 0, 0, 1, 0, 0);
 }
 .tiger {
   z-index: 1;
-  transform: matrix(0.9, 0, 0, 0.9, 140, 0);
+  transform: matrix(1.13, 0, 0, 1.13, -2, 2);
 }
 .panda {
   z-index: 2;
-  transform: matrix(1, 0, 0, 1, 85, 0);
+  transform: matrix(1.4, 0, 0, 1.3, 60, 4);
 }
 .monkey {
   z-index: 1;
-  transform: matrix(0.9, 0, 0, 0.9, 35, 0);
+  transform: matrix(1.13, 0, 0, 1.13, 124, 2);
 }
 .elephant {
   z-index: 0;
-  transform: matrix(0.8, 0, 0, 0.8, -70, 0);
+  transform: matrix(1, 0, 0, 1, 120, 0);
 }
 .pets-images__article {
   margin: 0 auto;
