--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -119,7 +119,7 @@ html {
   height: 64px;
   border-radius: 50%;
   overflow: hidden;
-  border: 2px solid #fff;
+  box-shadow: 0 0 0 2px #fff, 0 0 13px #fff;
 }
 .map__pet {
   position: absolute;
@@ -250,7 +250,7 @@ html {
   visibility: visible;
 }
 .map__icon-container:hover {
-  border: 4px solid #74d40d;
+  box-shadow: 0 0 0 4px #74d40d, 0 0 13px #74d40d;
 }
 .text {
   font-size: 16px;
@@ -320,7 +320,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.footer-links {
+.footer-content {
   padding-top: 5px;
   display: flex;
   justify-content: space-between;
@@ -339,6 +339,12 @@ html {
   width: 230px;
   padding: 15px;
 }
+.footer-links__links {
+  display: flex;
+  justify-content: space-between;
+  max-width: 570px;
+  width: 100%;
+}
 .footer-menu {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -353,7 +359,6 @@ html {
 .social {
   display: flex;
   justify-content: space-between;
-  border-style: none;
 }
 .footer-credentials {
   display: flex;
@@ -370,7 +375,7 @@ html {
 .yd-logo {
   cursor: default;
 }
-.footer-copyright {
+.footer-copyright{
   display: flex;
   justify-content: space-between;
   max-width: 790px;
