--- a/online-zoo/pages/zoos/panda/panda.css
+++ b/online-zoo/pages/zoos/panda/panda.css
@@ -90,9 +90,6 @@ html {
 }
 
 /* Main content heading */
-.main {
-  padding-top: 100px;
-}
 .heading-container {
   padding-top: 5%;
 }
@@ -111,10 +108,11 @@ html {
   max-width: 1920px;
   width: 100%;
   margin: 0 auto;
+  padding-top: 100px;
 }
 .sidebar-menu {
   background: url(/assets/images/pets-sidebar/sidebar-background.svg) center no-repeat;
-  margin-top: 10%;
+  margin-top: 190px;
   width: 111px;
   height: 380px;
   position: fixed;
@@ -128,18 +126,18 @@ html {
   position: relative;
 }
 .icon-container:hover {
-  border: 4px solid #74d40d;
+  box-shadow: 0 0 0 4px #74d40d, 0 0 13px #74d40d;
 }
 .icon-container {
   width: 64px;
   height: 64px;
   border-radius: 50%;
   overflow: hidden;
-  border: 2px solid #fff;
+  box-shadow: 0 0 0 2px #fff, 0 0 13px #fff;
 }
 .icon-active .icon-container {
   pointer-events: none;
-  border: 4px solid #74d40d;
+  box-shadow: 0 0 0 4px #74d40d, 0 0 13px #74d40d;
 }
 .tooltip {
   visibility: hidden;
@@ -322,7 +320,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.footer-links {
+.footer-content {
   padding-top: 5px;
   display: flex;
   justify-content: space-between;
@@ -341,6 +339,12 @@ html {
   width: 230px;
   padding: 15px;
 }
+.footer-links__links {
+  display: flex;
+  justify-content: space-between;
+  max-width: 570px;
+  width: 100%;
+}
 .footer-menu {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -355,7 +359,6 @@ html {
 .social {
   display: flex;
   justify-content: space-between;
-  border-style: none;
 }
 .footer-credentials {
   display: flex;
@@ -372,7 +375,7 @@ html {
 .yd-logo {
   cursor: default;
 }
-.footer-copyright {
+.footer-copyright{
   display: flex;
   justify-content: space-between;
   max-width: 790px;
